--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/web3": "^1.0.20",
     "dotenv": "^17.2.0",
+    "typescript": "^5.8.3",
     "web3": "^4.16.0"
   }
 }
