--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "tsx index.ts",
+    "dev": "tsx watch index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -14,5 +16,9 @@
     "dotenv": "^17.2.0",
     "typescript": "^5.8.3",
     "web3": "^4.16.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3"
   }
 }
